--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/viewFinder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:scaleType="fillStart" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="P2P Messenger"
-        android:textSize="24sp"
-        android:layout_marginBottom="24dp"/>
+        android:background="#80000000"
+        android:padding="8dp"
+        android:text="Waiting for camera..."
+        android:textColor="#FFFFFF"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editTarget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Target IP:Port (e.g. 192.168.1.5:8080)"
-        android:inputType="text"
-        android:text="10.0.2.2:8080" />
-
-    <EditText
-        android:id="@+id/editMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Message"
-        android:inputType="text"
-        android:layout_marginTop="16dp"/>
-
-    <Button
-        android:id="@+id/btnSend"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Send Message"
-        android:layout_marginTop="24dp"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
