--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
     tools:context=".MainActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000">
 
     <!-- Camera Preview (Full Screen) -->
     <androidx.camera.view.PreviewView
@@ -13,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:scaleType="fillStart" />
+
 
     <!-- Top Info HUD -->
     <androidx.cardview.widget.CardView
@@ -64,6 +71,20 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnMenu"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#33000000"
+        android:contentDescription="Open menu"
+        android:padding="8dp"
+        android:src="@drawable/ic_menu_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="#FFFFFF" />
+
     <!-- Calendar + Journal Card -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardCalendar"
@@ -72,6 +93,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:visibility="gone"
         app:cardBackgroundColor="#11151B"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
@@ -648,4 +670,16 @@
         </LinearLayout>
     </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#11151B"
+        app:itemIconTint="#E8EEF2"
+        app:itemTextColor="#E8EEF2"
+        app:menu="@menu/nav_drawer_menu" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
